<resources>
    <string name="app_name">Search Bangsaen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_edit_page">Edit page</string>
    <string name="title_activity_map_direction">Map</string>
    <string name="logout">Logout</string>

    <!-- day -->
    <string name="monday">จันทร์</string>
    <string name="tuesday">อังคาร</string>
    <string name="wednesday">พุธ</string>
    <string name="thursday">พฤหัสบดี</string>
    <string name="friday">ศุกร์</string>
    <string name="saturday">เสาร์</string>
    <string name="sunday">อาทิตย์</string>

</resources>
