<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@drawable/bg_landing"

              tools:context="com.buu.se.searchbangsaen.add_categories.fragment.AddDetailResFragment">

    <android.support.v7.widget.CardView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:cardBackgroundColor="#ff9100"
        app:cardCornerRadius="0dp"
        app:cardElevation="3dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:padding="15dp"
                android:paddingTop="15dp"
                android:src="@drawable/btn_back"/>

            <TextView
                android:id="@+id/tvNameTitle"
                style="@style/SimpleTextCloud.medium.bold"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:lines="1"
                android:text="รายละเอียดร้านอาหาร"
                android:textColor="#ffffffff"
                />

        </RelativeLayout>

    </android.support.v7.widget.CardView>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.9"
        android:paddingTop="20dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"

            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                >

                <EditText
                    android:id="@+id/et_add_food"
                    style="@style/SimpleTextCloud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="ชื่อร้านอาหาร"
                    android:inputType="text"
                    android:lines="1"
                    android:padding="10dp"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                >

                <EditText
                    android:id="@+id/et_add_phone"
                    style="@style/SimpleTextCloud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:hint="เบอร์ติดต่อ"
                    android:inputType="phone"
                    android:lines="1"
                    android:padding="10dp"
                    />
            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:alpha="0.9"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/white"
                    style="@style/SimpleTextCloud.micro.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="เปิดร้าน"

                    />

                <android.support.v7.widget.CardView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:cardCornerRadius="3dp"

                    app:cardElevation="3dp"
                    >

                    <Button
                        android:id="@+id/et_time_open"
                        style="@style/SimpleTextCloud"
                        android:layout_width="90dp"
                        android:layout_height="30dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:hint="-- . -- น."
                        android:inputType="datetime"
                        android:lines="1"
                        android:paddingLeft="5dp"
                        />
                </android.support.v7.widget.CardView>

                <TextView
                    style="@style/SimpleTextCloud.micro.bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/white"
                    android:text="ปิดร้าน"
                    />

                <android.support.v7.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="right"
                    app:cardCornerRadius="3dp"
                    app:cardElevation="3dp"
                    >

                    <Button
                        android:id="@+id/et_time_close"
                        style="@style/SimpleTextCloud"
                        android:layout_width="90dp"

                        android:layout_height="30dp"
                        android:layout_marginLeft="10dp"
                        android:background="@color/white"
                        android:gravity="center"
                        android:hint="-- . -- น."
                        android:inputType="datetime"
                        android:lines="1"
                        />
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="5dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="10dp"
                    >

                    <TextView
                        style="@style/SimpleTextCloud.medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:background="#a3a3a3"
                        android:paddingLeft="10dp"
                        android:text="วันที่ร้านเปิด"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <CheckBox
                            android:id="@+id/chkSun"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/sunday"/>

                        <CheckBox
                            android:id="@+id/chkMonday"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/monday"/>

                        <CheckBox
                            android:id="@+id/chktuesday"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/tuesday"
                            />

                        <CheckBox
                            android:id="@+id/chkWed"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/wednesday"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:orientation="horizontal"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp">

                        <CheckBox
                            android:id="@+id/chkThursday"
                            style="@style/SimpleTextCloud"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:lines="1"
                            android:text="@string/thursday"/>

                        <CheckBox
                            android:id="@+id/chkFriday"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/friday"
                            />

                        <CheckBox
                            android:id="@+id/chkSaturday"
                            style="@style/SimpleTextCloud"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:text="@string/saturday"/>

                    </LinearLayout>
                    <TextView
                        android:id="@+id/text_error"
                        android:visibility="gone"
                        android:textColor="@color/Text_error"
                        android:text="กรุณาเลือก 1 ตัวเลือก"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:cardCornerRadius="3dp"
                app:cardElevation="3dp"
                >

                <EditText
                    android:id="@+id/et_address"
                    style="@style/SimpleTextCloud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"

                    android:hint="ที่อยู่ร้านอาหาร"
                    android:inputType="textMultiLine"
                    android:padding="10dp"
                    />
            </android.support.v7.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp">

                <Button
                    style="@style/SimpleTextCloud.mini.bold"
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_border_submit"
                    android:text="ยืนยัน"
                    android:textColor="#60d9cb"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
